[package]
name = "ddd_derives"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["derive", "fold", "full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
dyn-clone = "1.0.16"
ambassador = "0.3.5"
typetag = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0"

[lib]
proc-macro = true