[package]
name = "ddd_model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddd_derives = { version = "0", path = "../ddd_derives" }
dyn-clone = "1.0.16"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0"
typetag = "0.2"
ambassador = "0.3.5"